# pyfilterbank

./: .buildinfo  .gitignore  .travis.yml  MANIFEST.in  README.md  build.py  examples.html  ffibuild.py  gammatone-1.py  gammatone-2.py  gammatone.html  genindex.html  glossary.html  index.html  introduction.html  melbank-1.py  melbank.html  np-modindex.html  objects.inv  octbank-1.py  octbank.html  py-modindex.html  pyproject.toml  search.html  searchindex.js  setup.py  sosfiltering.html  splweighting-1.py  splweighting.html
_modules/: butterworth.html  gammatone.html  index.html  melbank.html  octbank.html  sosfiltering.html  splweighting.html
_modules/pyfilterbank/: octbank.html
_sources/: index.txt  octbank.txt  splweighting.txt
pyfilterbank/: __init__.py  blockprocessing.py  butterworth.py  chebyshev.py  design.py  factory.py  gammatone.py  octave.py  octbank.py  scales.py  sosfilt.c  sosfiltering.py  splweighting.py
pyfilterbank/docs/source/: conf.py  gammatone.rst  index.rst  octbank.rst
pyfilterbank/tests/: check_filterbank_filtering.py  check_mrfilter.py  test_butterworth.py  test_octbank.py  test_sosfiltering.py
src/pyfilterbank/: __init__.py  build_sosfilt.py  melbank.py  rbj_audio_eq.py  sosfilt.c  sosfiltering.py  splweighting.py  stft.py
src/pyfilterbank/docs/: Makefile
src/pyfilterbank/docs/source/: index.rst  melbank.rst  octbank.rst  sosfiltering.rst
src/pyfilterbank/tests/: test_sosfiltering.py
tests/: check_filterbank_filtering.py  test_butterworth.py  test_octave.py  test_sosfiltering.py
